Bug 156077 - Hidden frames in document
Summary: Hidden frames in document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: redlinehide-regressions
  Show dependency treegraph
 
Reported: 2023-06-27 10:59 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-03 12:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimized example document (24.84 KB, application/vnd.oasis.opendocument.text)
2023-06-27 10:59 UTC, Gabor Kelemen (Collabora)
Details
The example file in current master and in 6.1 (337.49 KB, image/png)
2023-06-27 11:00 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-06-27 10:59:54 UTC
Created attachment 188104 [details]
Minimized example document

Attached document contains 3 pages with some page-anchored frames on the third.

When opened in Writer 6.2+, these are hidden and invisible.

1. Open attached document
2. Scroll to the third page
-> there should be three frames with text above the "Page 3" paragraph, but these are not visible - they are present only in the Navigator.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: df29592493367bc03c9602c924711852eecf64c4
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Bibisected in 6.2 linux repo with SW_REDLINEHIDE=1 to:

https://git.libreoffice.org/core/+/7e8b4756d95057f069467b34e7849f9354856578

author Michael Stahl <Michael.Stahl@cib.de> Mon Sep 17 11:26:01 2018 +0200
committer Michael Stahl <Michael.Stahl@cib.de> Wed Sep 19 10:18:33 2018 +0200

sw_redlinehide_2: disable layout-cache for now
Comment 1 Gabor Kelemen (Collabora) 2023-06-27 11:00:33 UTC
Created attachment 188105 [details]
The example file in current master and in 6.1
Comment 2 Commit Notification 2023-06-28 16:34:33 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ff8ec4cfe5df1e15c3e9f6adc843dfe31358e097

tdf#156077 sw: layout: call AssertFlyPages() in Init()

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2023-06-28 16:35:27 UTC
fixed on master. guess that only worked by accident before.
Comment 4 Commit Notification 2023-06-29 08:41:23 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/23eadd873de2e56d1e5f866fefae25c648f302f9

tdf#156077 sw: layout: call AssertFlyPages() in Init()

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-07-03 10:46:03 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c34e72ff817b07403f908a9098dd513b96c30ad1

tdf#156077 sw: layout: call AssertFlyPages() in Init()

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2023-07-12 08:01:22 UTC
Fix verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 663db89378aa1f0425e795ef5d471f134e658dc4
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Gabor and Michael!
Comment 7 Commit Notification 2023-07-12 17:03:33 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-5":

https://git.libreoffice.org/core/commit/a4f4a1c69dede3030626c722dbe9dc6868771aa4

tdf#156077 sw: layout: call AssertFlyPages() in Init()

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.