tdf#156077 sw: layout: call AssertFlyPages() in Init()

The bugdoc has 3 pages, and there are at-page flys anchored to the 3rd
page, and these are not displayed - simply missing from the layout.

In LO 6.1, this worked because the layout-cache was read from the file,
and 3 pages were created in SwRootFrame::Init() calling InsertCnt_().

But now this creates only 2 pages, and later SwLayAction creates the 2nd
page between the existing ones on some MoveFwd(), but despite page nr 2
becoming page nr 3 nothing attaches the at-page flys to the now-page-3.

If a document is loaded containing at-page flys, then all pages that
have flys anchored to them should be created in SwRootFrame::Init()
already.

(regression from commit 7e8b4756d95057f069467b34e7849f9354856578)

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153720
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit ff8ec4cfe5df1e15c3e9f6adc843dfe31358e097)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153699
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit c34e72ff817b07403f908a9098dd513b96c30ad1)

Change-Id: I4792c483a7620efd81211e6ad0d9220152367d68